--- a/program.ipynb
+++ b/program.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,12 +106,11 @@
     "for j in range (X.shape[1]):\n",
     "    \n",
     "    values, counts = np.unique(X[:,j], return_counts=True)\n",
-    "    values=values[0:2]\n",
-    "    counts=counts[0:2]\n",
+    "    values=values[:2]\n",
+    "    counts=counts[:2]\n",
     "\n",
     "    #print(values[np.argmax(counts)])\n",
     "    #print(values[np.argmin(counts)])\n",
-    "    #print(values, counts)\n",
     "\n",
     "    X[:,j] = np.where(X[:,j] == values[np.argmax(counts)], 0.0, X[:,j])\n",
     "    X[:,j] = np.where(X[:,j] == values[np.argmin(counts)], 2.0, X[:,j])\n",
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -150,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All samples have less than 50 %% missing values\n"
+      "All samples have less than 50 % missing values\n"
      ]
     }
    ],
@@ -178,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,20 +275,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 2. 0.]\n",
-      " [2. 0. 0. ... 2. 2. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 2. 0. 0.]\n",
+      "[[0. 2. 0. ... 0. 0. 2.]\n",
       " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 2. ... 0. 0. 0.]]\n"
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 2. 0. ... 0. 0. 2.]\n",
+      " [0. 0. 0. ... 0. 2. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
      ]
     }
    ],
@@ -299,10 +298,44 @@
     "from sklearn.impute import SimpleImputer\n",
     "\n",
     "imputer = SimpleImputer(strategy=\"most_frequent\")\n",
-    "\n",
     "X_train = imputer.fit_transform(X_train) \n",
+    "X_test = imputer.fit_transform(X_test) \n",
     "\n",
     "print(X_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE (Train):\t0.00\n",
+      "R2 (Train):\t1.00\n",
+      "MSE (Test):\t4.50\n",
+      "R2 (Test):\t0.49\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Linear Regression\n",
+    "\n",
+    "import sklearn.metrics as metrics\n",
+    "from sklearn import linear_model\n",
+    "\n",
+    "\n",
+    "model1 = linear_model.LinearRegression()\n",
+    "model1.fit(X_train, y_train)\n",
+    "predictions_training = model1.predict(X_train)\n",
+    "predictions_testing = model1.predict(X_test)\n",
+    "\n",
+    "print(\"MSE (Train):\\t%.2f\" % metrics.mean_squared_error(y_train, predictions_training))\n",
+    "print(\"R2 (Train):\\t%.2f\" % metrics.r2_score(y_train, predictions_training))\n",
+    "print(\"MSE (Test):\\t%.2f\" % metrics.mean_squared_error(y_test, predictions_testing))\n",
+    "print(\"R2 (Test):\\t%.2f\" % metrics.r2_score(y_test, predictions_testing))"
    ]
   },
   {
@@ -314,62 +347,128 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 0. 0. ... 0. 0. 0.]\n",
-      " [2. 0. 2. ... 2. 0. 2.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 2. 2. ... 0. 0. 0.]]\n"
+      "MSE (Train):\t2.80\n",
+      "R2 (Train):\t0.74\n",
+      "MSE (Test):\t4.50\n",
+      "R2 (Test):\t0.49\n"
      ]
     }
    ],
    "source": [
-    "# Impute missing values on test data based on training data\n",
-    "\n",
-    "X_test = imputer.transform(X_test)\n",
-    "X_test = imputer.transform(X_test)\n",
-    "\n",
-    "print(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE (Train):\t0.00\n",
-      "R2 (Train):\t1.00\n",
-      "MSE (Test):\t5.28\n",
-      "R2 (Test):\t0.54\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Linear Regression\n",
-    "\n",
-    "import sklearn.metrics as metrics\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "lr = LinearRegression()\n",
-    "lr.fit(X_train, y_train)\n",
-    "predictions_training = lr.predict(X_train)\n",
-    "predictions_testing = lr.predict(X_test)\n",
+    "from sklearn import linear_model\n",
+    "model2=linear_model.Ridge(alpha=5000)\n",
+    "model2.fit(X_train, y_train)\n",
+    "predictions_training = model2.predict(X_train)\n",
+    "predictions_testing = model2.predict(X_test)\n",
     "\n",
     "print(\"MSE (Train):\\t%.2f\" % metrics.mean_squared_error(y_train, predictions_training))\n",
     "print(\"R2 (Train):\\t%.2f\" % metrics.r2_score(y_train, predictions_training))\n",
     "print(\"MSE (Test):\\t%.2f\" % metrics.mean_squared_error(y_test, predictions_testing))\n",
     "print(\"R2 (Test):\\t%.2f\" % metrics.r2_score(y_test, predictions_testing))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE (Train):\t7.30\n",
+      "R2 (Train):\t0.32\n",
+      "MSE (Test):\t6.60\n",
+      "R2 (Test):\t0.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import linear_model\n",
+    "model3=linear_model.ElasticNet(alpha=1.0,l1_ratio=0.5,max_iter=7000)\n",
+    "model3.fit(X_train, y_train)\n",
+    "predictions_training = model3.predict(X_train)\n",
+    "predictions_testing = model3.predict(X_test)\n",
+    "\n",
+    "print(\"MSE (Train):\\t%.2f\" % metrics.mean_squared_error(y_train, predictions_training))\n",
+    "print(\"R2 (Train):\\t%.2f\" % metrics.r2_score(y_train, predictions_training))\n",
+    "print(\"MSE (Test):\\t%.2f\" % metrics.mean_squared_error(y_test, predictions_testing))\n",
+    "print(\"R2 (Test):\\t%.2f\" % metrics.r2_score(y_test, predictions_testing))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53.91969494760732 5000 [ 0.         -0.         -0.          0.         -0.          0.\n",
+      "  0.         -0.         -0.          0.          0.         -0.\n",
+      " -0.         -0.         -0.         -0.         -0.         -0.\n",
+      "  0.          0.         -0.          0.         -0.         -0.\n",
+      " -0.          0.         -0.          0.          0.          0.\n",
+      " -0.          0.          0.          0.         -0.          0.\n",
+      " -0.          0.          0.         -0.         -0.          0.\n",
+      " -0.          0.         -0.         -0.         -0.         -0.\n",
+      "  0.         -0.          0.          0.         -0.          0.\n",
+      " -0.         -0.         -0.          0.         -0.          0.\n",
+      " -0.          0.         -0.         -0.         -0.         -0.\n",
+      " -0.          0.         -0.         -0.         -0.          0.\n",
+      " -0.         -0.          0.         -0.          0.          0.\n",
+      "  0.          0.         -0.         -0.         -0.         -0.\n",
+      "  0.         -0.         -0.          0.         -0.         -0.\n",
+      " -0.         -0.          0.         -0.         -0.         -0.\n",
+      "  0.         -0.          0.         -0.          0.          0.\n",
+      "  0.         -0.          0.          0.         -0.          0.\n",
+      " -0.          0.          0.          0.         -0.         -0.\n",
+      "  0.          0.          0.         -0.          0.          0.\n",
+      "  0.         -0.         -0.         -0.          0.          0.\n",
+      "  0.         ... -0.         -0.          0.         -0.\n",
+      "  0.          0.          0.          0.          0.         -0.\n",
+      "  0.06198914 -0.         -0.         -0.          0.         -0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.         -0.          0.         -0.          0.         -0.\n",
+      " -0.         -0.          0.          0.         -0.          0.\n",
+      "  0.          0.          0.         -0.         -0.          0.\n",
+      "  0.         -0.         -0.         -0.         -0.          0.\n",
+      " -0.         -0.          0.         -0.         -0.          0.\n",
+      " -0.         -0.          0.          0.         -0.         -0.\n",
+      "  0.          0.         -0.         -0.          0.         -0.\n",
+      "  0.          0.         -0.         -0.         -0.         -0.\n",
+      " -0.          0.         -0.         -0.         -0.          0.\n",
+      " -0.         -0.          0.         -0.         -0.          0.\n",
+      " -0.          0.         -0.          0.         -0.          0.09053577\n",
+      "  0.          0.          0.          0.         -0.         -0.\n",
+      "  0.         -0.          0.          0.         -0.          0.\n",
+      "  0.         -0.          0.         -0.          0.          0.\n",
+      " -0.         -0.          0.          0.         -0.          0.\n",
+      "  0.         -0.          0.         -0.         -0.          0.\n",
+      "  0.         -0.          0.         -0.         -0.         -0.\n",
+      "  0.          0.         -0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.set_printoptions(edgeitems=127)\n",
+    "#print(model1.intercept_,model1.coef_)\n",
+    "#print(model2.intercept_,model2.coef_)\n",
+    "print(model3.intercept_,model3.coef_.size,model3.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -383,9 +482,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.6.9"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "610a6f344c2137faf927ea819c63f6cee33a2c04455044b28099f39fe9722347"
